[project]
name = "ambuda"
version = "0.1.0"
description = "A modern Sanskrit library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.3",
    "celery>=5.4.0",
    "flask-admin>=1.6.1",
    "flask-babel>=4.0.0",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-wtf>=1.2.2",
    "flask>=3.0.3",
    "linkify-it-py>=2.0.3",
    "sentry-sdk>=2.17.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "ruff>=0.7.1",
    "sphinx>=8.1.3",
]


[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = [
    "B",     # flake8-bugbear
    "F",     # pyflakes
    "N818",  # error-suffix-on-exception-name
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "I001",  # isort
]
ignore = [
    "B007",  # unused-loop-control-variable
    "B905"   # zip-without-explicit-strict
]
