[project]
name = "ambuda"
version = "0.1.0"
description = "A modern Sanskrit library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.3",
    "celery>=5.4.0",
    "email-validator>=2.2.0",
    "flask-babel>=4.0.0",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-wtf>=1.2.2",
    "flask>=3.0.3",
    "google-cloud-vision>=3.8.0",
    "indic-transliteration>=2.3.68",
    "linkify-it-py>=2.0.3",
    "pillow>=11.0.0",
    "pymupdf>=1.24.13",
    "python-dotenv>=1.0.1",
    "python-slugify>=8.0.4",
    "regex>=2024.9.11",
    "sentry-sdk>=2.17.0",
    "flask-admin[sqlalchemy]==2.0.0a1",
    "wtforms-sqlalchemy>=0.4.2",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
    "pytest-playwright>=0.5.2",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "ruff>=0.7.1",
    "sphinx>=8.1.3",
]

[tool.coverage.run]
omit = [
    "ambuda/scripts/*",
    "ambuda/seed/**",
]

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
select = [
    "B",     # flake8-bugbear
    "F",     # pyflakes
    "N818",  # error-suffix-on-exception-name
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "I001",  # isort
]
ignore = [
    "B007",  # unused-loop-control-variable
    "B905"   # zip-without-explicit-strict
]
