[project]
name = "ambuda"
version = "0.1.0"
description = "An open Sanskrit library"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.12.1",
    "celery==5.5.3",
    "email-validator==1.2.1",
    "flask==3.0.0",
    "flask-admin==1.6.1",
    "flask-babel==4.0.0",
    "flask-login==0.6.3",
    "flask-mail==0.9.1",
    "flask-wtf==1.2.1",
    "google-api-core[grpc]==2.8.2",
    "google-auth==2.9.0",
    "google-cloud-vision==3.1.1",
    "googleapis-common-protos==1.56.3",
    "gunicorn==20.1.0",
    "indic-transliteration==2.3.31",
    "linkify-it-py==2.0.0",
    "markdown-it-py==2.1.0",
    "markupsafe==2.1.1",
    "pillow>=12.0.0",
    "pymupdf==1.26.5",
    "python-dateutil==2.8.2",
    "python-dotenv==0.20.0",
    "python-slugify==6.1.2",
    "redis==4.3.4",
    "regex==2022.6.2",
    "requests>=2.27.1",
    "sentry-sdk==2.42.0",
    # Need to pin for flask_admin.
    "setuptools<81",
    "sqlalchemy==1.4.37",
    # Need to pin for flask.
    "werkzeug==3.0.1",
    "wtforms==3.0.1",
    "wtforms-sqlalchemy==0.3",
]

[dependency-groups]
dev = [
    "alembic==1.8.0",
    "click==8.1.3",
    "conllu==4.5.2",
    "fabric==3.2.2",
    "mypy-extensions==0.4.3",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff>=0.14.1",
    "sphinx==8.2.3",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.coverage.run]
omit = [
    "ambuda/scripts/*",
    "ambuda/seed/**",
]

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
lint.select = [
    "B",     # flake8-bugbear
    "F",     # pyflakes
    "N818",  # error-suffix-on-exception-name
    "UP",    # pyupgrade
    "W",     # pycodestyle
    "I001",  # isort
]
lint.ignore = [
    "B007",  # unused-loop-control-variable
    "B905"   # zip-without-explicit-strict
]
